Halfway through nothing but I wanted to get the server.py updates pushed + the update_due_dates.py thing up for heroku before scheduler runs

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,5 @@
-<div class="spacer">
-</div>
 <nav>
-  <a routerLink="{{button.hasOwnProperty('dest')?button.dest:'/'+button.text}}"
+  <li routerLink="{{button.hasOwnProperty('dest')?button.dest:'/'+button.text}}"
     *ngFor="let button of buttons"
     [class.selected]="button === selectedButton"
     (click)="onSelect(button)">{{button.text}}</a>
