--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,3 +1,8 @@
-<p>
-  checkout works!
-</p>
+<h2>Welcome</h2><br/>
+<app-user-info [user]="user"></app-user-info>
+<div *ngIf="loggedInAsSchool">
+   <input [(ngModel)]="uid" placeholder="Your ID" #uID><br/>
+</div>
+<input [(ngModel)]="mid" placeholder="Barcode" #mID>
+<button (click)="submit(mID.value); mID.value=''">Submit</button><br/>
+<app-media-info [mid]="mid"></app-media-info>
