--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,18 @@
-<form [formGroup]="form">
-    <fieldset>
-        <legend>Login</legend>
-        <div class="form-field">
-            <label>Email:</label>
-            <input name="email" formControlName="email">
-        </div>
-        <div class="form-field">
-            <label>Password:</label>
-            <input name="password" formControlName="password" 
-                   type="password">
-        </div>
-    </fieldset>
-    <div class="form-buttons">
-        <button class="button button-primary" 
-                (click)="login()">Login</button>
-    </div>
+<div class="container" style="margin-top: 2em;">
+<form (ngSubmit)="submit();  pw.value=none; uid.value=none">
+    <input #uid
+      name="uid"
+      [(ngModel)]="uID"
+      [ngModelOptions]="{updateOn: 'submit'}"
+      class="form-control"
+      placeholder="User ID">
+    <input #pw
+      name="pw" type="password"
+      (keyup.enter)="submit(); pw.value=none; uid.value=none"
+      [(ngModel)]="password"
+      [ngModelOptions]="{updateOn: 'submit'}"
+      class="form-control"
+      placeholder="Password">
+    <button [disabled]="!(pw.value && uid.value)" type="submit" class="btn btn-default">Submit</button>
 </form>
+</div>
