--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,6 @@
 </div>
 <nav>
   <a routerLink="{{button.hasOwnProperty('dest')?button.dest:'/'+button.text}}"
-    *ngFor="let button of buttons"
-    [class.selected]="button === selectedButton"
-    (click)="onSelect(button)">{{button.text}}</a>
+    routerLinkActive="selected"
+    *ngFor="let button of buttons">{{button.text}}</a>
 </nav>
