--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,5 @@
-<nav>
+<ul class="home-sidebar">
   <li routerLink="{{button.hasOwnProperty('dest')?button.dest:'/'+button.text}}"
-    *ngFor="let button of buttons"
-    [class.selected]="button === selectedButton"
-    (click)="onSelect(button)">{{button.text}}</a>
-</nav>
+    routerLinkActive="selected"
+    *ngFor="let button of buttons">{{button.text}}</li>
+</ul>
