Fix initial password fetching. To-do tomorrow: Add a signup endpoint to the app so I can test the stuff that happens after login.

--- a/src/app/logging/logging.component.html
+++ b/src/app/logging/logging.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="loggingService.messages.length">
-    <h2>Messages</h2>
+    <h2>Event logs</h2>
     <button class="clear" (click)="loggingService.clear()">clear</button>
     <div *ngFor="let message of loggingService.messages">
         {{message}}
