--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,12 +8,14 @@
       name="lid"
       [(ngModel)]="lID"
       [ngModelOptions]="{updateOn: 'submit'}"
+      [class.invalid]="!numRe.test(lid.value)"
       placeholder="Location ID">
     <input #uid
       name="uid"
       (keyup)="errmsg=null"
       [(ngModel)]="uID"
       [ngModelOptions]="{updateOn: 'submit'}"
+      [class.invalid]="!numRe.test(uid.value)"
       placeholder="User ID">
     <input #pw
       name="pw" type="password"
@@ -27,3 +29,6 @@
       class="button"
       (click)="loading=true">Submit</button>
   </form>
+  <br>
+  <button routerLink="/signup/organization" class="signup">Sign up as an organization and/or administrator</button>
+  <button routerLink="/signup/user" class="signup">Sign up as a user</button>
