--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Monteserrat');
+/*@import url('https://fonts.googleapis.com/css?family=Roboto');*/
 
 * {
   /*background-color: #fafafa;*/
