--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,9 @@
-<ul *ngIf="buttons" class="sidebar-container">
-  <li routerLink="{{button.hasOwnProperty('dest')?button.dest:'/'+button.text}}"
+<ul *ngIf="buttons" id="sidebar-container">
+  <li class="dummy"></li>
+  <li [routerLink]="[{outlets: {home: button.hasOwnProperty('dest')?button.dest:'/'+button.text}}]"
     routerLinkActive="selected"
-    *ngFor="let button of buttons">{{button.text}}</li>
+    *ngFor="let button of buttons"
+    [attr.style]="san(button.hasOwnProperty('color')?'background-color:'+button.color+' !important':'/**/')">
+      <span>{{button.text}}</span>
+  </li>
 </ul>
