--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div id="container">
     <div id="spacer"></div>
-    <app-sidebar [uID]="globals.uID" class="sidebar"></app-sidebar>
-    <router-outlet name="home" class="main"></router-outlet>
+    <app-sidebar [uID]="globals.uID"></app-sidebar>
+    <router-outlet></router-outlet>
 </div>
