--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <ul *ngIf="buttons" id="sidebar-container">
-  <li class="dummy"></li>
-  <li [routerLink]="button.hasOwnProperty('dest')?button.dest:button.text"
+  <li class="dummy"></li> <!-- "button.hasOwnProperty('dest')?button.dest:button.text" -->
+  <li [routerLink]="['/checkout']"
     routerLinkActive="selected"
     *ngFor="let button of buttons"
     [attr.style]="san(button.hasOwnProperty('color')?'background-color:'+button.color+' !important':'/**/')">
