I fixed it, I think, and I wish I could say I knew how

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div id="container">
     <div id="spacer"></div>
     <app-sidebar [uID]="globals.uID"></app-sidebar>
-    <router-outlet name='sub'></router-outlet>
+    <router-outlet></router-outlet>
 </div>
