Fix routing. Could have been done with so much by now if I'd thought about adding a single period six (6) hours ago

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -5,4 +5,4 @@
 </div>
 <input [(ngModel)]="mid" placeholder="Barcode" #mID>
 <button (click)="submit(mID.value); mID.value=''">Submit</button><br/>
-<!--app-media-info [mid]="mid"></app-media-info-->
+<app-media-info [mID]="mid"></app-media-info>
