--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,4 @@
-<div class="spacer">
-</div>
+<div id="spacer">
 <nav>
   <a routerLink="{{button.hasOwnProperty('dest')?button.dest:'/'+button.text}}"
     routerLinkActive="selected"
@@ -11,3 +10,4 @@
       Logout
   </a>
 </nav>
+</div>
