--- a/src/app/location-mgmt/location-mgmt.component.html
+++ b/src/app/location-mgmt/location-mgmt.component.html
@@ -1,3 +1,5 @@
-<p>
-  location-mgmt works!
-</p>
+<div id="container">
+    <div id="spacer"></div>
+    <app-mgmt-header [uID]="globals.uID"></app-mgmt-header>
+    <router-outlet></router-outlet>
+</div>
