--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<h2>Welcome</h2><br/>
+<h2>Welcome, {{username}}</h2><br/>
 <!--app-user-info [user]="user"></app-user-info-->
 <div *ngIf="!isLibrary">
    <input [(ngModel)]="uid" placeholder="Your ID" #uID><br/>
