--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,6 +1,6 @@
-<h2>Welcome, {{username}}</h2><br/>
-<!--app-user-info [user]="user"></app-user-info-->
-<div *ngIf="!isLibrary">
+<h2>Welcome, {{name}}</h2><br/>
+<app-member-acct-info [uID]="uid"></app-member-acct-info>
+<div *ngIf="isCheckoutAccount">
    <input [(ngModel)]="uid" placeholder="Your ID" #uID><br/>
 </div>
 <input [(ngModel)]="mid" placeholder="Barcode" #mID>
