Add sidebar toggle

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,6 +1,6 @@
 #container {
   display: grid;
-  grid-template: 35px 1fr / 1fr 9fr;
+  grid-template: 35px 1fr / 10% 90%;
   grid-template-areas: "header header"
                        "side main";
 }
