--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,5 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css?family=Roboto');*/
-
 * {
   /*background-color: #fafafa;*/
 }
@@ -8,8 +6,8 @@ form {
   flex-direction: column;
 }
 p {
-  font-family: Roboto, sans-serif;
-  font-weight: 200;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
   font-size: 60px;
   text-align: center;
 }
