--- a/src/app/checkout-session/checkout-session.component.css
+++ b/src/app/checkout-session/checkout-session.component.css
@@ -20,18 +20,18 @@ li img {
 li .text {
   display: inline-block;
 }
-li.out {
-  border-color: #00c516;
-  background-color: #edfeee;
-}
-li.out .text .action {
-  color: #00c516;
-}
 li.in {
+  border-color: #00c516;
+  background-color: #e0ffe0;
+}
+li.in .text .action {
+  color: #009811;
+}
+li.out {
   border-color: #29bdff;
   background-color: #edf7fe;
 }
-li.in .text .action {
+li.out .text .action {
   color: #888;
 }
 li .text .barcode {
