--- a/src/app/member-acct-info/member-acct-info.component.html
+++ b/src/app/member-acct-info/member-acct-info.component.html
@@ -1,12 +1,1 @@
-<ul>
-  <li *ngFor="let msg of globals.checkoutMessages" [ngClass]="msg.type">
-    <span>{{msg.text}}</span>
-    <!--
-      class can be any of:
-        `alert` (unauthorized to check out),
-        `warning` (fines, overdue media), or
-        `notification` (hold has become available)
-    -->
-    <span class="x" (click)="this.globals.checkoutMessages.splice(msg.index, 1)">ⓧ</span>
-  </li>
-</ul>
+<div><h1>Account modification has been left unimplemented for the FBLA demo.</h1></div>
