--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,24 @@
-::ng-deep * ~ * { font-family: 'Roboto', sans-serif; }
+::ng-deep * ~ * {
+  font-family: 'Roboto', sans-serif;
+}
+::ng-deep * ~ button, * ~ input[type=submit] {
+  background-color: #43ba2e;
+  color: white;
+  padding: 10px 10px;
+  margin: auto;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  transition: opacity .2s;
+}
+::ng-deep * ~ button:hover, * ~ input[type=submit]:hover {
+  opacity: 0.8;
+}
+::ng-deep * ~ input {
+  margin: 2px;
+  border-style: solid;
+  border-color: #dcdcdc;
+  border-radius: 5px;
+  border-width: 1px;
+  padding: 10px;
+}
