--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -42,32 +42,18 @@ form input, form div.msg-container {
   margin: 4px auto;
 }
 form input {
-  border: none;
   margin: 8px auto;
-  border-style: solid;
-  border-color: #dcdcdc;
-  border-radius: 5px;
-  border-width: 1px;
 }
 input.invalid {
-  border-style: solid !important;
-  border-color: #ff2929 !important;
-  border-width: 1px !important;
-  color: #ff2929 !important;
-  background-color: #fef0ed !important;
+  border-color: #ff2929;
+  color: #ff2929;
+  background-color: #fef0ed;
 }
 button {
-  background-color: #43ba2e;
-  color: white;
   padding: 14px 20px;
-  margin: auto;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-  transition: opacity .2s;
 }
 button.signup {
-  background-color: #2e7fba !important;
+  background-color: #2e7fba;
 }
 button:disabled {
   opacity: 0.5;
