--- a/src/app/mgmt-roles-perms/mgmt-roles-perms.component.html
+++ b/src/app/mgmt-roles-perms/mgmt-roles-perms.component.html
@@ -1,3 +1,3 @@
-<p>
-  mgmt-roles-perms works!
-</p>
+<ul>
+  <li *ngFor="let role of roles" routerLink="../../roles/{{role.rid}}">{{role.name}}</li>
+</ul>
